--- a/views/projects.erb
+++ b/views/projects.erb
@@ -12,5 +12,14 @@
   <p>No projects listed at the moment</p>
 <% end %>
 
-<p><a href="/projects/new">Add a project</a>
+<h2>Add a new project:</h2>
+
+<form action="/projects" method="post">
+  <div class="form-group">
+    <input name="title" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn">Add Project</button>
+</form>
+
+
 
