--- a/views/edit_project.erb
+++ b/views/edit_project.erb
@@ -1,16 +1,11 @@
-<h1> Edit <%= project.title %></h1>
+<h1> Edit: <%= @project.title %></h1>
 
-<form action="/doctors/<%= @project.id %>" method="post">
-  <input name="_method" types="hidden" value="patch">
+<form action="/projects/<%= @project.id %>" method="post">
+  <input name="_method" type="hidden" value="patch">
 
   <label for="title">Edit project's name</label>
-  <input id="title" name="title" type="text">
+  <input id="title" name="title" class="form-control" type="text">
 
   <button types="submit">Save</button>
 </form>
 
-<form action="/projects/<%= @project.id %>" method="post">
-  <input name="_method" types="hidden" value="delete">
-
-  <button type="submit">Delete Project</button>
-</form>
