--- a/views/project.erb
+++ b/views/project.erb
@@ -1,18 +1,34 @@
-<h2>Project Name: <%= @project.title %></h2>
+<h1>Project Title: <%= @project.title %></h1>
 
 <h3>Volunteers:</h3>
 
-<% if @projects.volunteers.any? %>
+<% if @project.volunteers %>
   <ul>
-    <% @projects.volunteers.each do |volunteer| %>
+    <% @project.volunteers.each do |volunteer| %>
       <li>
-        <a href="/projects/<%= @project.id %>/volunteers/<%= volunteer.id %>"><%= volunteer.name%></a>
+        <a href="/projects/<%= @project.id %>/volunteers/<%= volunteer.id %>"><%= volunteer.name %></a>
       </li>
     <% end %>
   </ul>
 <% else %>
   <p>No volunteers yet!</p>
 <% end %>
+
+<h3>Add a Volunteer:</h3>
+
+<form action="/projects/<%= @project.id %>/volunteers" method="post">
+  <div class="form-group">
+    <input name="name" class="form-control" type="text">
+  </div>
+
+  <button type="submit" class="btn">Add Volunteer!</button>
+</form>
+
+<form action="/projects/<%= @project.id %>" method="post">
+  <input name="_method" type="hidden" value="delete">
+
+  <button type="submit">Delete Project</button>
+</form>
 
 <p><a href="/projects/<%= @project.id %>/edit">Edit Project</a></p>
 <p><a href="/projects">Return to project list</a></p>
