--- a/views/projects.erb
+++ b/views/projects.erb
@@ -5,7 +5,9 @@
 <% if @projects.any? %>
   <ul>
     <% @projects.each do |project| %>
-      <li><a href="/projects/<%= project.id %>"><%= project.title %></a></li>
+      <li>
+      <a href="/projects/<%= project.id %>"><%= project.title %></a>
+      </li>
     <% end %>
   </ul>
 <% else %>
