--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -1,2 +1,18 @@
 <h1>Volunteer Name: <%= @volunteer.name %></h1>
-<h1>Project Assignment: <%= @volunteer.project.title %></h1>
+
+<form action="/projects/<%= @volunteer.project.id %>/volunteers/<%= @volunteer.id%>" method="post">
+  <input name="_method" type="hidden" value="patch">
+
+  <label for="title">Edit volunteer's name</label>
+  <input id="name" name="name" class="form-control" type="text">
+
+  <button types="submit">Save</button>
+</form>
+
+<%# <form action="/projects/<%= @volunteer.project.id %>/volunteers/<%= @volunteer.id %>" method="post"> %>
+  <%# <input name="_method" type="hidden" value="delete"> %>
+
+  <%# <button type="submit" class="btn">Delete Volunteer</button> %>
+<%# </form> %>
+
+
